--- a/figure4/Fig4_plots_.ipynb
+++ b/figure4/Fig4_plots_.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "cb378fe0",
    "metadata": {},
    "outputs": [
     {
@@ -43,7 +42,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "2db4d115",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +64,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ddd455f9",
    "metadata": {},
    "source": [
     "FIGURE 4C"
@@ -75,7 +72,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "c8ec1077",
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +153,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "9d6f6b52",
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +236,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "946accdf",
    "metadata": {},
    "source": [
     "FIGURE 4D"
@@ -250,7 +244,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "5bb3e5ac",
    "metadata": {},
    "outputs": [
     {
@@ -352,7 +345,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7ded788f",
    "metadata": {},
    "source": [
     "FIGURE 4E"
@@ -361,7 +353,6 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "426be847",
    "metadata": {},
    "outputs": [
     {
@@ -571,7 +562,6 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "d92ba9d5",
    "metadata": {},
    "outputs": [
     {
@@ -644,7 +634,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "307b18f7",
    "metadata": {},
    "source": [
     "FIGURE 4F"
@@ -653,7 +642,6 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "a02fe984",
    "metadata": {},
    "outputs": [
     {
@@ -736,7 +724,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "094d9e3f",
    "metadata": {},
    "source": [
     "FIGURE 4G"
@@ -745,7 +732,6 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "ee25800b",
    "metadata": {},
    "outputs": [
     {
@@ -835,7 +821,6 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "ca1cf19d",
    "metadata": {},
    "outputs": [
     {
@@ -923,7 +908,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e7590dd6",
    "metadata": {},
    "source": [
     "FIGURE 4H"
@@ -932,7 +916,6 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "92eca195",
    "metadata": {},
    "outputs": [
     {
@@ -986,7 +969,6 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "60d48963",
    "metadata": {},
    "outputs": [
     {
@@ -1070,7 +1052,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e760c44",
    "metadata": {},
    "source": [
     "FIGURE 4J"
@@ -1079,7 +1060,6 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "a5dd4327",
    "metadata": {},
    "outputs": [
     {
@@ -1180,7 +1160,6 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "d976d29e",
    "metadata": {},
    "outputs": [
     {
@@ -1222,7 +1201,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3f4863e5",
    "metadata": {},
    "source": [
     "FIGURE 4K"
@@ -1231,7 +1209,6 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "b095b751",
    "metadata": {},
    "outputs": [
     {
@@ -1291,7 +1268,6 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "a013b13a",
    "metadata": {},
    "outputs": [
     {
@@ -1373,7 +1349,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f01faf10",
    "metadata": {},
    "source": [
     "FIGURE 4L"
@@ -1382,7 +1357,6 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "9feddf7b",
    "metadata": {},
    "outputs": [
     {
@@ -1445,7 +1419,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "757e1659",
    "metadata": {},
    "source": [
     "FIGURE 4M"
@@ -1454,7 +1427,6 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "6c4954ab",
    "metadata": {},
    "outputs": [
     {
@@ -1581,7 +1553,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e87b254",
    "metadata": {},
    "source": [
     "FIGURE 4N"
@@ -1590,7 +1561,6 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "21b63bd4",
    "metadata": {},
    "outputs": [
     {
@@ -1650,7 +1620,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "83ce326f",
    "metadata": {},
    "source": [
     "FIGURE 4O"
@@ -1659,7 +1628,6 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "0e3dded4",
    "metadata": {
     "scrolled": false
    },
@@ -1755,7 +1723,6 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "d3112750",
    "metadata": {},
    "outputs": [
     {
@@ -1853,7 +1820,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5c9c73e6",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1861,7 +1827,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "307db994",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1869,7 +1834,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e62b3cb8",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1877,7 +1841,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1891,7 +1855,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
