--- a/figure4/Fig4_plots_.ipynb
+++ b/figure4/Fig4_plots_.ipynb
@@ -926,47 +926,13 @@
     "        closest_examples,example_totals = find_closest_example(data,bins_)\n",
     "        e_r_warp_factors +=[list(example_totals.values())]\n",
     "        e_reverse += [sum(example_totals.values())]\n",
-    "#     elif mouse in hlesion_mice:\n",
-    "#         print(mouse)\n",
-    "#         #forward:\n",
-    "#         data = list(group.warp_factor.values[group.warp_factor.values > 0])\n",
-    "#         hlf_data += data\n",
-    "#         closest_examples,example_totals = find_closest_example(data,bins_)\n",
-    "#         hl_f_warp_factors +=[list(example_totals.values())]\n",
-    "#         hl_forward += [sum(example_totals.values())]\n",
-    "#         #reverse:\n",
-    "#         data = list(abs(group.warp_factor.values[group.warp_factor.values < 0]))\n",
-    "#         hlr_data += data\n",
-    "#         closest_examples,example_totals = find_closest_example(data,bins_)\n",
-    "#         hl_r_warp_factors +=[list(example_totals.values())]\n",
-    "#         hl_reverse += [sum(example_totals.values())]\n",
-    "#     elif mouse in learning_mice:\n",
-    "#         print(mouse)\n",
-    "#         #forward:\n",
-    "#         data = list(group.warp_factor.values[group.warp_factor.values > 0])\n",
-    "#         lf_data += data\n",
-    "#         closest_examples,example_totals = find_closest_example(data,bins_)\n",
-    "#         l_f_warp_factors +=[list(example_totals.values())]\n",
-    "#         l_forward += [sum(example_totals.values())]\n",
-    "#         #reverse:\n",
-    "#         data = list(abs(group.warp_factor.values[group.warp_factor.values < 0]))\n",
-    "#         lr_data += data\n",
-    "#         closest_examples,example_totals = find_closest_example(data,bins_)\n",
-    "#         l_r_warp_factors +=[list(example_totals.values())]\n",
-    "#         l_reverse += [sum(example_totals.values())]\n",
-    "        \n",
+    "\n",
     "e_f_warp_factors = relative_warp_values(e_f_warp_factors)\n",
     "e_r_warp_factors = relative_warp_values(e_r_warp_factors)\n",
-    "# hl_f_warp_factors = relative_warp_values(hl_f_warp_factors)\n",
-    "# hl_r_warp_factors = relative_warp_values(hl_r_warp_factors)\n",
-    "# l_f_warp_factors = relative_warp_values(l_f_warp_factors)\n",
-    "# l_r_warp_factors = relative_warp_values(l_r_warp_factors)\n",
     "\n",
     "    \n",
     "fig,ax = plt.subplots(1, 1,figsize=(10, 5))\n",
-    "e_data_f,e_data_r = plot_warps(e_f_warp_factors,e_r_warp_factors,ax,'expert',bins_)\n",
-    "# hl_data_f,hl_data_r = plot_warps(hl_f_warp_factors,hl_r_warp_factors,ax1,'h lesion')\n",
-    "# l_data_f,l_data_r = plot_warps(l_f_warp_factors,l_r_warp_factors,ax2,'learning')"
+    "e_data_f,e_data_r = plot_warps(e_f_warp_factors,e_r_warp_factors,ax,'expert',bins_)\n"
    ]
   },
   {
@@ -1210,12 +1176,6 @@
     "for index,events in enumerate(data[\"event_lens\"]):\n",
     "    if data[\"expert\"][index] == 1:\n",
     "        e_mean_lens += [np.mean(events)]\n",
-    "#     elif hlesion[index] == 1:\n",
-    "#         hl_mean_lens += [np.mean(events)]\n",
-    "#     elif learning[index] == 1:\n",
-    "#         l_mean_lens += [np.mean(events)]\n",
-    "        \n",
-    "    \n",
     "\n",
     "# Create figure and axes\n",
     "fig, ax= plt.subplots(1, 1,figsize=(2, 5))\n",
@@ -1403,15 +1363,6 @@
     "e_all_chunk_forward_end_mean = []\n",
     "e_all_chunk_reverse_start_mean = []\n",
     "e_all_chunk_reverse_end_mean = []\n",
-    "hl_all_chunk_forward_start_mean = []\n",
-    "hl_all_chunk_forward_end_mean = []\n",
-    "hl_all_chunk_reverse_start_mean = []\n",
-    "hl_all_chunk_reverse_end_mean = []\n",
-    "l_all_chunk_forward_start_mean = []\n",
-    "l_all_chunk_forward_end_mean = []\n",
-    "l_all_chunk_reverse_start_mean = []\n",
-    "l_all_chunk_reverse_end_mean = []\n",
-    "# s_o_d = []\n",
     "for mouse,group in start_end_df.groupby('mouse'):\n",
     "    chunk_forward_start_mean = []\n",
     "    chunk_forward_end_mean = []\n",
