--- a/figure4/Fig4_plots_.ipynb
+++ b/figure4/Fig4_plots_.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "4611f4f0",
    "metadata": {},
    "outputs": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "id": "e2359610",
    "metadata": {},
    "outputs": [],
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "id": "40cbe2f1",
    "metadata": {},
    "outputs": [
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "id": "1949205e",
    "metadata": {},
    "outputs": [
@@ -170,7 +170,7 @@
        "Text(0.5, 1.0, 'held sequences in colour and extra sequences + background in grey')"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -241,6 +241,378 @@
     "# ## faster:\n",
     "ax.scatter(spikes_df[mask][background_remove_mask].timestamp, neuron_order[mask][background_remove_mask],marker = 'o', s=20, linewidth=0,color = c_ ,alpha=1)\n",
     "ax.set_title('held sequences in colour and extra sequences + background in grey')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "f2bc6f03",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0.3</th>\n",
+       "      <th>Unnamed: 0.2</th>\n",
+       "      <th>Unnamed: 0.1</th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>neuron</th>\n",
+       "      <th>timestamp</th>\n",
+       "      <th>sequence_type</th>\n",
+       "      <th>seq_confidence</th>\n",
+       "      <th>sequence_type_adjusted</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>840.7280</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>0.48</td>\n",
+       "      <td>-1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2813.8822</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.69</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.3100</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>0.93</td>\n",
+       "      <td>8.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.3677</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>0.86</td>\n",
+       "      <td>8.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.6727</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>0.51</td>\n",
+       "      <td>7.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>693753</th>\n",
+       "      <td>693753</td>\n",
+       "      <td>693753</td>\n",
+       "      <td>693753</td>\n",
+       "      <td>693753</td>\n",
+       "      <td>125.0</td>\n",
+       "      <td>3382.6365</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>0.66</td>\n",
+       "      <td>-1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>693754</th>\n",
+       "      <td>693754</td>\n",
+       "      <td>693754</td>\n",
+       "      <td>693754</td>\n",
+       "      <td>693754</td>\n",
+       "      <td>125.0</td>\n",
+       "      <td>3382.6819</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>0.55</td>\n",
+       "      <td>-1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>693755</th>\n",
+       "      <td>693755</td>\n",
+       "      <td>693755</td>\n",
+       "      <td>693755</td>\n",
+       "      <td>693755</td>\n",
+       "      <td>125.0</td>\n",
+       "      <td>3387.9618</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>0.52</td>\n",
+       "      <td>-1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>693756</th>\n",
+       "      <td>693756</td>\n",
+       "      <td>693756</td>\n",
+       "      <td>693756</td>\n",
+       "      <td>693756</td>\n",
+       "      <td>125.0</td>\n",
+       "      <td>3391.6225</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>0.49</td>\n",
+       "      <td>-1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>693757</th>\n",
+       "      <td>693757</td>\n",
+       "      <td>693757</td>\n",
+       "      <td>693757</td>\n",
+       "      <td>693757</td>\n",
+       "      <td>125.0</td>\n",
+       "      <td>3399.5861</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>0.80</td>\n",
+       "      <td>-1.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>693758 rows × 9 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Unnamed: 0.3  Unnamed: 0.2  Unnamed: 0.1  Unnamed: 0  neuron  \\\n",
+       "0                  0             0             0           0     1.0   \n",
+       "1                  1             1             1           1     1.0   \n",
+       "2                  2             2             2           2     2.0   \n",
+       "3                  3             3             3           3     2.0   \n",
+       "4                  4             4             4           4     2.0   \n",
+       "...              ...           ...           ...         ...     ...   \n",
+       "693753        693753        693753        693753      693753   125.0   \n",
+       "693754        693754        693754        693754      693754   125.0   \n",
+       "693755        693755        693755        693755      693755   125.0   \n",
+       "693756        693756        693756        693756      693756   125.0   \n",
+       "693757        693757        693757        693757      693757   125.0   \n",
+       "\n",
+       "        timestamp  sequence_type  seq_confidence  sequence_type_adjusted  \n",
+       "0        840.7280            8.0            0.48                    -1.0  \n",
+       "1       2813.8822            3.0            0.69                     3.0  \n",
+       "2          1.3100            8.0            0.93                     8.0  \n",
+       "3          1.3677            8.0            0.86                     8.0  \n",
+       "4          1.6727            7.0            0.51                     7.0  \n",
+       "...           ...            ...             ...                     ...  \n",
+       "693753  3382.6365           -1.0            0.66                    -1.0  \n",
+       "693754  3382.6819           -1.0            0.55                    -1.0  \n",
+       "693755  3387.9618           -1.0            0.52                    -1.0  \n",
+       "693756  3391.6225            8.0            0.49                    -1.0  \n",
+       "693757  3399.5861           -1.0            0.80                    -1.0  \n",
+       "\n",
+       "[693758 rows x 9 columns]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "spikes_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "10a515e3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'behav_time_interval_start': [[8300, 10000], [10500, 11200], [13300, 14300]],\n",
+       " 'neuron_index': [40.0,\n",
+       "  118.0,\n",
+       "  61.0,\n",
+       "  46.0,\n",
+       "  93.0,\n",
+       "  109.0,\n",
+       "  96.0,\n",
+       "  31.0,\n",
+       "  116.0,\n",
+       "  119.0,\n",
+       "  3.0,\n",
+       "  27.0,\n",
+       "  84.0,\n",
+       "  75.0,\n",
+       "  13.0,\n",
+       "  20.0,\n",
+       "  83.0,\n",
+       "  11.0,\n",
+       "  100.0,\n",
+       "  0.0,\n",
+       "  47.0,\n",
+       "  14.0,\n",
+       "  16.0,\n",
+       "  103.0,\n",
+       "  49.0,\n",
+       "  48.0,\n",
+       "  8.0,\n",
+       "  71.0,\n",
+       "  7.0,\n",
+       "  53.0,\n",
+       "  54.0,\n",
+       "  5.0,\n",
+       "  6.0,\n",
+       "  44.0,\n",
+       "  22.0,\n",
+       "  91.0,\n",
+       "  43.0,\n",
+       "  30.0,\n",
+       "  89.0,\n",
+       "  123.0,\n",
+       "  122.0,\n",
+       "  18.0,\n",
+       "  68.0,\n",
+       "  92.0,\n",
+       "  39.0,\n",
+       "  121.0,\n",
+       "  87.0,\n",
+       "  59.0,\n",
+       "  15.0,\n",
+       "  88.0,\n",
+       "  51.0,\n",
+       "  79.0,\n",
+       "  114.0,\n",
+       "  90.0,\n",
+       "  70.0,\n",
+       "  111.0,\n",
+       "  55.0,\n",
+       "  117.0,\n",
+       "  69.0,\n",
+       "  113.0,\n",
+       "  72.0,\n",
+       "  115.0,\n",
+       "  58.0,\n",
+       "  63.0,\n",
+       "  62.0,\n",
+       "  36.0,\n",
+       "  65.0,\n",
+       "  28.0,\n",
+       "  85.0,\n",
+       "  77.0,\n",
+       "  56.0,\n",
+       "  10.0,\n",
+       "  64.0,\n",
+       "  76.0,\n",
+       "  60.0,\n",
+       "  112.0,\n",
+       "  74.0,\n",
+       "  33.0,\n",
+       "  67.0,\n",
+       "  66.0,\n",
+       "  86.0,\n",
+       "  19.0,\n",
+       "  81.0,\n",
+       "  82.0,\n",
+       "  120.0,\n",
+       "  78.0,\n",
+       "  23.0,\n",
+       "  73.0,\n",
+       "  80.0,\n",
+       "  108.0,\n",
+       "  50.0,\n",
+       "  95.0,\n",
+       "  1.0,\n",
+       "  124.0,\n",
+       "  37.0,\n",
+       "  107.0,\n",
+       "  101.0,\n",
+       "  34.0,\n",
+       "  12.0,\n",
+       "  52.0,\n",
+       "  98.0,\n",
+       "  25.0,\n",
+       "  45.0,\n",
+       "  26.0,\n",
+       "  41.0,\n",
+       "  57.0,\n",
+       "  106.0,\n",
+       "  104.0,\n",
+       "  102.0,\n",
+       "  42.0,\n",
+       "  105.0,\n",
+       "  94.0,\n",
+       "  9.0,\n",
+       "  17.0,\n",
+       "  35.0,\n",
+       "  21.0,\n",
+       "  2.0,\n",
+       "  32.0,\n",
+       "  97.0,\n",
+       "  24.0,\n",
+       "  110.0,\n",
+       "  99.0,\n",
+       "  29.0,\n",
+       "  4.0,\n",
+       "  38.0],\n",
+       " 'colors': ['---',\n",
+       "  '#8FC681',\n",
+       "  '#ABB9B2',\n",
+       "  '#ED6F5D',\n",
+       "  '#64BFB5',\n",
+       "  '#36495E',\n",
+       "  '#FFD161',\n",
+       "  '#264999',\n",
+       "  'pink',\n",
+       "  'lightblue',\n",
+       "  'k']}"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "example_sleep_data"
    ]
   },
   {
