replay analysis added

--- a/other/ppseq/Prepare_data.ipynb
+++ b/other/ppseq/Prepare_data.ipynb
@@ -50,7 +50,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Figure directory set to:  C:\\Users\\Emmett\\Documents\\Sequence\\Replay\\figures/\n"
+      "Figure directory set to:  C:\\Users\\Emmett\\Documents\\REPLAY_PAPER\\procedural_replay_paper_2024\\other\\ppseq\\figures/\n"
      ]
     }
    ],
@@ -124,47 +124,7 @@
     "mouse_implant_recordings = ['178_1_7']\n",
     "\n",
     "# [\"136_1_3\",\"136_1_4\",\"149_1_2\",\"178_1_4\",\"178_1_5\",\"178_1_6\",\"178_1_8\",\"178_1_9\",\"178_2_1\",\"178_2_2\",\"178_2_4\",\"238_1_4\",\"238_1_5\"]\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "# [\"149_1_1\",\"149_1_2\",\"149_1_3\",\"162_1_3\",\"178_1_4\",\"178_1_5\",\"178_1_6\",\"178_1_7\",\"178_1_8\",\"178_1_9\",\"178_2_1\",\"178_2_2\",\"178_2_3\",\"178_2_4\",\"238_1_2\",\"238_1_4\",\"238_1_5\",\"238_1_6\",\"256_1_1\",\"255_1_1\",\"255_1_2\",\"255_1_4\",\"262_1_1\",\"262_1_2\",\"262_1_4\",\"262_1_5\",\"262_1_6\",\"268_1_2\",\"269_1_1\",\"269_1_2\",\"269_1_3\",\"269_1_4\",\"269_1_5\",\"269_1_6\",\"269_1_7\",\"270_1_1\",\"270_1_3\",\"270_1_5\",\"270_1_6\"]\n",
-    "\n",
-    "# [\"262_1_1\",\"262_1_2\",\"262_1_4\"\"262_1_5\",\"262_1_6\",\"268_1_2\",\"269_1_1\",\"269_1_2\",\"269_1_3\",\"269_1_4\",\"269_1_5\",\"269_1_6\",\"269_1_7\",\"270_1_1\",\"270_1_3\",\"270_1_5\",\"270_1_6\"]\n",
-    "\n",
-    "\n",
-    "# [\"262_1_4\",\"262_1_5\",\"262_1_6\",\"270_1_1\",\"268_1_2\",\"270_1_3\",\"270_1_5\",\"270_1_6\"]\n",
-    "\n",
-    "# [\"269_1_1\",\"269_1_2\",\"269_1_3\",\"269_1_4\",\"269_1_5\",\"269_1_6\",\"269_1_7\",\"270_1_1\",\"270_1_3\",\"270_1_5\",\"270_1_6\",\n",
-    "\n",
-    "# A = [\"136_1_3\",\"136_1_4\",\"149_1_1\",\"149_1_2\",\"149_1_3\",\"162_1_3\",\"178_1_4\",\"178_1_6\",\"178_1_7\",\"178_1_8\",\"178_1_9\",\"178_2_1\",\"178_2_2\",\"178_2_3\",\"178_2_4\",\"238_1_2\",\"238_1_4\",\"238_1_5\",\"238_1_6\",\"256_1_1\",\"255_1_1\",\"255_1_2\",\"255_1_4\",\"262_1_1\",\"262_1_2\",\"268_1_2\",\"269_1_1\",\"269_1_2\",\"269_1_3\",\"269_1_4\",\"269_1_5\",\"269_1_6\",\"269_1_7\",\"270_1_1\",\"270_1_3\",\"270_1_5\",\"270_1_6\",\"262_1_4\",\"262_1_5\",\"262_1_6\"]\n",
-    "\n",
-    "#['262_1_7']\n",
-    "# ['255_1_1', '255_1_2','255_1_3', '255_1_4',\n",
-    "                           \n",
-    "#                         '256_1_1', '256_1_2',\n",
-    "                            \n",
-    "#                             '262_1_1', '262_1_2', '262_1_4', '262_1_5','262_1_6', \n",
-    "                            \n",
-    "#                             '269_1_1','269_1_2','269_1_3','269_1_4','269_1_5','269_1_6','269_1_7',\n",
-    "                            \n",
-    "#                             '270_1_1','270_1_2','270_1_3','270_1_4','270_1_5','270_1_6','270_1_7',\n",
-    "                            \n",
-    "#                             '268_1_1','268_1_2','268_1_3','268_1_4','268_1_5','268_1_6','268_1_7','268_1_8','268_1_9','268_1_10']\n",
-    "#['136_1_2', '136_1_3', '136_1_4', '149_1_1', '149_1_2', '149_1_3', '149_2_1', '162_1_3', '178_1_1', '178_1_3', '178_1_4', '178_1_5', \n",
-    "\n",
-    "#['136_1_2', '136_1_3', '136_1_4', '149_1_1', '149_1_2', '149_1_3', '149_2_1', '162_1_3', '178_1_1', '178_1_3', '178_1_4', '178_1_5', '178_1_6', '178_1_7', '178_1_8', '178_1_9', '178_2_1', '178_2_2', '178_2_3', '178_2_4', '238_1_4', '238_1_5', '238_1_6', '238_1_7']\n",
-    "# mouse_implant_recordings = [\"178_2_2\", \"178_1_7\", \"178_1_1\", \"163_1_3\", \"149_1_1\", \"136_1_2\"]\n",
-    "# mouse_implant_recordings = ['148_2_2', '149_1_4', '149_2_1', '178_1_2', '178_1_5', '178_2_4']\n",
-    "# mouse_implant_recordings = [\"238_1_2\", \"238_1_4\", \"238_1_6\", \"163_1_3\", \"149_1_1\", \"136_1_2\"]\n",
-    "# mouse_implant_recordings = [\"238_1_2\", \"238_1_4\", \"238_1_6\", \"238_1_5\", \"238_1_7\"]\n",
-    "\n",
-    "\n",
-    "# mouse_implant_recordings = [\"136_1_3\", \"136_1_4\", \"149_1_1\", \"149_1_2\", \"149_1_3\", \"149_2_1\", \"162_1_3\", \"178_1_1\", \"178_1_2\", \"178_1_4\", \"178_1_6\", \"178_1_7\", \"178_1_8\", \"178_1_9\", \"178_2_1\", \"178_2_2\", \"178_2_3\", \"178_2_4\", \"178_2_1\"]\n",
-    "\n",
-    "# mouse_implant_recordings = [\"178_1_7\",\"178_2_1\",\"162_1_3\",\"149_1_2\",\"136_1_2\",\"178_1_1\",\"178_1_4\",\"178_2_4\",\"149_1_1\"]\n"
+    "\n"
    ]
   },
   {
